a3 link fix and gear gap fix

--- a/public/tuiter/bookmarks/index.css
+++ b/public/tuiter/bookmarks/index.css
@@ -109,6 +109,12 @@
     padding-right: 12px;
 }
 
+.wd-bookmark-icon-symbol-heart {
+    font-size: 16px;
+    padding-right: 12px;
+    color: darkred;
+}
+
 .wd-bookmark-icon-link {
     text-decoration: none;
     color: rgb(110, 118, 125);
